# gLike

./: .gitignore  CMakeLists.txt
scripts/: powerLawUL.C  testPoissonLkl.cc  tutorial_DM_searches.ipynb  tutorial_poisson_lkl.ipynb
